[RTGW] More organizing [skip ci]

--- a/src/Notes/ComputerScience/CG/RTGW/04/01_transformations.html
+++ b/src/Notes/ComputerScience/CG/RTGW/04/01_transformations.html
@@ -31,7 +31,7 @@
     <hr>
     <div class="content">
 <p>
-<a href="04.html">Back</a>
+<a href="index.html">Back</a>
 </p>
 
 <div id="Transformations"><h1 id="Transformations" class="header"><a href="#Transformations">Transformations</a></h1></div>
@@ -41,27 +41,27 @@
 <div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
 <ul>
 <li>
-<a href="transformations.html#Vertex%20Transformations">Vertex Transformations</a>
+<a href="01_transformations.html#Vertex%20Transformations">Vertex Transformations</a>
 
 <ul>
 <li>
-<a href="transformations.html#Homogeneous%20Coordinates">Homogeneous Coordinates</a>
+<a href="01_transformations.html#Homogeneous%20Coordinates">Homogeneous Coordinates</a>
 
 </li><li>
-<a href="transformations.html#Transformations">Transformations</a>
+<a href="01_transformations.html#Transformations">Transformations</a>
 
 <ul>
 <li>
-<a href="transformations.html#Translation%20Matrices">Translation Matrices</a>
+<a href="01_transformations.html#Translation%20Matrices">Translation Matrices</a>
 
 </li><li>
-<a href="transformations.html#Scaling%20matrices">Scaling matrices</a>
+<a href="01_transformations.html#Scaling%20matrices">Scaling matrices</a>
 
 </li><li>
-<a href="transformations.html#Rotation%20Matrices">Rotation Matrices</a>
+<a href="01_transformations.html#Rotation%20Matrices">Rotation Matrices</a>
 
 </li><li>
-<a href="transformations.html#Cumulating%20transformations">Cumulating transformations</a>
+<a href="01_transformations.html#Cumulating%20transformations">Cumulating transformations</a>
 
 </li></ul>
 </li></ul>
