--- a/src/Notes/ComputerScience/CG/RTGW/04/04_camera.html
+++ b/src/Notes/ComputerScience/CG/RTGW/04/04_camera.html
@@ -31,7 +31,7 @@
     <hr>
     <div class="content">
 <p>
-<a href="04.html">Back</a>
+<a href="index.html">Back</a>
 </p>
 
 <div id="Camera Marix"><h1 id="Camera Marix" class="header"><a href="#Camera Marix">Camera Marix</a></h1></div>
@@ -41,16 +41,16 @@
 <div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
 <ul>
 <li>
-<a href="camera.html#Camera%20Translation">Camera Translation</a>
+<a href="04_camera.html#Camera%20Translation">Camera Translation</a>
 
 </li><li>
-<a href="camera.html#Interpreting%20Transformations%20Using%20the%20Model-View%20Matrix">Interpreting Transformations Using the Model-View Matrix</a>
+<a href="04_camera.html#Interpreting%20Transformations%20Using%20the%20Model-View%20Matrix">Interpreting Transformations Using the Model-View Matrix</a>
 
 </li><li>
-<a href="camera.html#Basic%20Camera%20Types">Basic Camera Types</a>
+<a href="04_camera.html#Basic%20Camera%20Types">Basic Camera Types</a>
 
 </li><li>
-<a href="camera.html#The%20Camera%20Model">The Camera Model</a>
+<a href="04_camera.html#The%20Camera%20Model">The Camera Model</a>
 
 </li></ul>
 <hr>
