--- a/src/Notes/ComputerScience/CG/RTGW/04/index.html
+++ b/src/Notes/ComputerScience/CG/RTGW/04/index.html
@@ -3,7 +3,7 @@
     <link rel="Stylesheet" type="text/css" href="../../../../../../src/style/index.css">
     <!-- Custom styling from vimwiki -->
     <link rel="Stylesheet" type="text/css" href="../../../../../../src/style/custom.css">
-    <title>Normal Transform</title>
+    <title>Camera</title>
   <script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=es6" id="latex_script" data-description="Support for latex"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" data-description="Support for latex"></script><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/search.css" data-description="Styling for search"><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/atom-one-light.min.css" data-description="Code highlight"><link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/public/icon.svg" data-description="Page icon"></head>
   <body>
     <a href="https://albamr09.github.io/" style="
@@ -31,114 +31,51 @@
     <hr>
     <div class="content">
 <p>
-<a href="04.html">Back</a>
+<a href="index.html">Back</a>
 </p>
 
-<div id="Normal Transform"><h1 id="Normal Transform" class="header"><a href="#Normal Transform">Normal Transform</a></h1></div>
+<div id="Camera"><h1 id="Camera" class="header"><a href="#Camera">Camera</a></h1></div>
 
 <hr>
 
-<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<p>
+Even though we have a camera within our 3D application, there is no camera object in the WebGL API—only matrices. That is because having matrices instead of a camera object gives WebGL the flexibility to represent complex projections and animations.
+</p>
+
+<div id="Camera-WebGL Does Not Have Cameras"><h2 id="WebGL Does Not Have Cameras" class="header"><a href="#Camera-WebGL Does Not Have Cameras">WebGL Does Not Have Cameras</a></h2></div>
+
+<p>
+WebGL does not have a camera object that you can manipulate. However, we can assume that what we render in the <code>canvas</code> is what our camera captures.
+</p>
+
+<p>
+Every time we move our camera around, we need to update the objects according to the new camera position. So, we need to transform each vertex. Similarly, we need to make sure that the object normals and light directions are still consistent after the camera has moved. In summary, we need to analyze two different types of transformations: 
+</p>
+
 <ul>
 <li>
-<a href="normal_transform.html#Calculating%20the%20Normal%20Matrix">Calculating the Normal Matrix</a>
+vertex (points) and 
+
+</li><li>
+normal (vectors)
 
 </li></ul>
-<hr>
+<div id="Camera-Content"><h2 id="Content" class="header"><a href="#Camera-Content">Content</a></h2></div>
 
-<p>
-Whenever vertices are transformed, normal vectors should also be transformed so that they point in the right direction. We could consider using the Model-View matrix that transforms vertices to do this, but this approach is problematic: the Model-View matrix will not always keep the perpendicularity of normals:
-</p>
+<ul>
+<li>
+<a href="01_transformations.html">Transformations</a>
 
-<p>
-<img src="https://albamr09.github.io/public/assets/normal_transformations.png" alt="Normal Transformations" style="width:400px">
-</p>
+</li><li>
+<a href="02_model_view.html">The Model, View and Projection matrices</a> ==
 
-<p>
-This problem occurs if there is a unidirectional (one axis) scaling transformation or a shearing transformation in the Model-View matrix.
-</p>
+</li><li>
+<a href="03_normal_transform.html">Normal Transform</a>
 
-<div id="Normal Transform-Calculating the Normal Matrix"><h3 id="Calculating the Normal Matrix" class="header"><a href="#Normal Transform-Calculating the Normal Matrix">Calculating the Normal Matrix</a></h3></div>
+</li><li>
+<a href="04_camera.html">Camera</a>
 
-<p>
-Two vectors are perpendicular if their dot product is \(0\). In our example
-</p>
-
-\begin{align}
-&lt;N, S&gt; = 0
-\end{align}
-
-<p>
-Here, \(S\) is the surface vector and can be calculated as the difference of two vertices. Let \(M\) be the Model-View matrix. We can use \(M\) to transform \(S\) as follows:
-</p>
-
-\begin{align}
-S' = MS
-\end{align}
-
-<p>
-We want to find a matrix, \(K\), that allows us to transform normals in a similar way. For the \(N\) normal, we want the following:
-</p>
-
-\begin{align}
-N' = KN
-\end{align}
-
-<p>
-For the scene to be consistent after obtaining \(N'\) and \(S'\), these two need to keep the perpendicularity that the original vectors \(N\) and \(S\) had.
-</p>
-
-\begin{align}
-&lt;N', S'&gt; = 0
-\end{align}
-
-<p>
-Substituting \(N'\) and \(S'\):
-</p>
-
-\begin{align}
-&lt;KN, MS&gt; = 0
-\end{align}
-
-\begin{align}
-(KN)^T(MS) = 0
-\end{align}
-
-\begin{align}
-N^TK^TMS = 0
-\end{align}
-
-\begin{align}
-N^T(K^TM)S = 0
-\end{align}
-
-<p>
-Now, remember that \(&lt;N, S&gt; = 0\) so \(N^TS = 0\). This means that in the previous equation, \((K^TM)\) needs to be the identity matrix, \(I\), so the original condition of N and S being perpendicular holds:
-</p>
-
-\begin{align}
-K^TM = I
-\end{align}
-
-\begin{align}
-K^TMM^{-1} = IM^{-1} = M^{-1}
-\end{align}
-
-\begin{align}
-K^T = M^{-1}
-\end{align}
-
-\begin{align}
-(K^T)^T = (M^{-1})^T
-\end{align}
-
-\begin{align}
-K = (M^{-1})^T
-\end{align}
-
-<p>
-\(K\) is obtained by transposing the inverse of the Model-View matrix (\(M\), in this example). We need to use \(K\) to multiply the normal vectors so that they keep being perpendicular to the surface when transformed.
-</p>
+</li></ul>
 </div>
   
 
