[RTGW] Fix typo [skip ci]

--- a/src/Notes/ComputerScience/CG/RTGW/04/index.html
+++ b/src/Notes/ComputerScience/CG/RTGW/04/index.html
@@ -67,7 +67,7 @@ normal (vectors)
 <a href="01_transformations.html">Transformations</a>
 
 </li><li>
-<a href="02_model_view.html">The Model, View and Projection matrices</a> ==
+<a href="02_model_view.html">The Model, View and Projection matrices</a>
 
 </li><li>
 <a href="03_normal_transform.html">Normal Transform</a>
