--- a/src/Notes/ComputerScience/CG/RTGW/index.html
+++ b/src/Notes/ComputerScience/CG/RTGW/index.html
@@ -49,7 +49,7 @@
 <a href="03.html">Lights</a>
 
 </li><li>
-<a href="04/04.html">Camera</a>
+<a href="04/index.html">Camera</a>
 
 </li></ol>
 </div>
