--- a/src/Notes/ComputerScience/CG/RTGW/04/02_model_view.html
+++ b/src/Notes/ComputerScience/CG/RTGW/04/02_model_view.html
@@ -286,7 +286,7 @@ In contrast, an orthogonal projection uses parallel lines; this means that lines
 
 <ul>
 <li>
-<a href="02_01_perspective.html">Perpective Matrix</a>
+<a href="02_01_perspective.html">Perspective Matrix</a>
 
 </li></ul>
  
@@ -331,9 +331,6 @@ The viewport coordinates originate in the lower-left corner of the HTML5 canvas.
 <ol>
 <li>
 <a href="https://jsantell.com/model-view-projection/">Model View Projection</a>
-
-</li><li>
-<a href="https://www.scratchapixel.com/lessons/3d-basic-rendering/perspective-and-orthographic-projection-matrix/opengl-perspective-projection-matrix.html">The Perspective Projection Matrix</a>
 
 </li></ol>
 </div>
