--- a/src/Notes/ComputerScience/CG/RTGW/04/02_model_view.html
+++ b/src/Notes/ComputerScience/CG/RTGW/04/02_model_view.html
@@ -288,6 +288,9 @@ In contrast, an orthogonal projection uses parallel lines; this means that lines
 <li>
 <a href="02_01_perspective.html">Perspective Matrix</a>
 
+</li><li>
+<a href="02_02_orthographic.html">Orthographic Matrix</a>
+
 </li></ul>
  
 <div id="Model, View and Projection Transform-WebGL Implementation"><h2 id="WebGL Implementation" class="header"><a href="#Model, View and Projection Transform-WebGL Implementation">WebGL Implementation</a></h2></div>
