--- a/src/Notes/ComputerScience/CG/RTGW/04/02_02_orthographic.html
+++ b/src/Notes/ComputerScience/CG/RTGW/04/02_02_orthographic.html
@@ -37,6 +37,273 @@
 <div id="Orthographic Matrix"><h1 id="Orthographic Matrix" class="header"><a href="#Orthographic Matrix">Orthographic Matrix</a></h1></div>
 
 <hr>
+
+<p>
+In this chapter, we will explore how to construct a matrix that projects a point from camera space onto the image plane of an orthographic camera.
+</p>
+
+<p>
+The aim of the orthographic projection matrix is to remap all coordinates within a specific 3D space bounding box to the <span id="Orthographic Matrix-canonical viewing volume"></span><strong id="canonical viewing volume">canonical viewing volume</strong>. For that we need to know the scene's bounding box, that is the bounding box that encompasses all the objects on the scene. The orthographic matrix then aims to remap this box to a canonical view volume, defined by minimum and maximum extents of \((-1, -1, -1)\) and \((1, 1, 1)\).
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/orthographic_perspective_bounding_box.png" alt="Bounding Boxes" style="witdh:500px;">
+</p>
+
+<p>
+Once we have computed the scene bounding box, we need to project the minimum and maximum extents of this bounding box onto the image plane of the camera. The \(x\)- and \(y\)-coordinates of any point expressed in camera space and the \(x\)- and \(y\)-coordinates of the same points projected onto the image plane remain identical. It may be necessary to adjust the projection of the bounding box's minimum and maximum extents onto the screen to ensure the screen window is either square or maintains the same aspect ratio as the image.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/camera_to_image_mapping.png" alt="Camera Coordinates' Mapping to Image Coordinates'" style="witdh:500px;">
+We will refer to these screen coordinates as \(l\), \(r\), \(t\), and \(b\), which stand for left, right, top, and bottom, respectively.
+</p>
+
+<p>
+Now, we need to remap the left and right screen coordinates \((l, r)\) to \(-1\) and \(1\), and apply the same remapping to the top and bottom coordinates \((t, b)\). Assuming \(x\) is any point within the range \([l ,r]\), we can state:
+</p>
+
+\begin{align}
+l \leq x \leq r
+\end{align}
+
+\begin{align}
+0 \leq x - l \leq r - l
+\end{align}
+
+\begin{align}
+0 \leq \frac{x - l}{r - l} \leq 1
+\end{align}
+
+\begin{align}
+0 \leq 2\frac{x - l}{r - l} \leq 2
+\end{align}
+
+\begin{align}
+-1 \leq 2\frac{x - l}{r - l} -1 \leq 1
+\end{align}
+
+<p>
+Now, the middle term falls within the range \([-1, 1]\), successfully remapping it. To further develop this formula:
+</p>
+
+\begin{align}
+-1 \leq \frac{2x - 2l - r + l}{r - l} \leq 1
+\end{align}
+
+\begin{align}
+-1 \leq \frac{2x - l - r}{r - l} \leq 1
+\end{align}
+
+\begin{align}
+-1 \leq \frac{2x}{r - l} - \frac{r + l}{r - l} \leq 1
+\end{align}
+
+<p>
+This yields the transformation formula for \(x\):
+</p>
+
+\begin{align}
+x' = \frac{2x}{r - l} - \frac{r + l}{r - l}
+\end{align}
+
+<p>
+To represent this transformation in matrix form:
+</p>
+
+\begin{align}
+\begin{bmatrix}
+\frac{2}{r - l} &amp; 0 &amp; 0 &amp; -\frac{r + l}{r - l} \\
+0 &amp; 1 &amp; 0 &amp; 0 \\
+0 &amp; 0 &amp; 1 &amp; 0 \\
+0 &amp; 0 &amp; 0 &amp; 1 \\
+\end{bmatrix}
+\end{align}
+
+<p>
+So:
+</p>
+
+\begin{align}
+\begin{bmatrix}
+\frac{2}{r - l} &amp; 0 &amp; 0 &amp; -\frac{r + l}{r - l} \\
+0 &amp; 1 &amp; 0 &amp; 0 \\
+0 &amp; 0 &amp; 1 &amp; 0 \\
+0 &amp; 0 &amp; 0 &amp; 1 \\
+\end{bmatrix} \cdot 
+\begin{bmatrix}
+x \\
+y \\
+z \\
+1 \\
+\end{bmatrix} = 
+\begin{bmatrix}
+\frac{2x}{r - l} - \frac{r + l}{r - l}
+y
+z
+1
+\end{bmatrix}
+\end{align}
+
+<p>
+The process for the y-coordinate is the same. You just need to replace \(r\) and \(l\) with \(t\) and \(b\) (top and bottom).
+</p>
+
+\begin{align}
+b \leq y \leq t
+\end{align}
+
+\begin{align}
+0 \leq y - b \leq t - b
+\end{align}
+
+\begin{align}
+0 \leq \frac{y - b}{t - b} \leq 1
+\end{align}
+
+\begin{align}
+0 \leq 2\frac{y - b}{t - b} \leq 2
+\end{align}
+
+\begin{align}
+-1 \leq 2\frac{y - b}{t - b} - 1 \leq 1
+\end{align}
+
+\begin{align}
+-1 \leq \frac{2y - 2b - t + b}{t - b} \leq 1
+\end{align}
+
+\begin{align}
+-1 \leq \frac{2y - b - t}{t - b} \leq 1
+\end{align}
+
+\begin{align}
+-1 \leq \frac{2y}{t - b} - \frac{t + b}{t - b} \leq 1
+\end{align}
+
+<p>
+So the transformation formula for \(y\) is as follows:
+</p>
+
+\begin{align}
+y' = \frac{2y}{t - b} - \frac{t + b}{t - b}
+\end{align}
+
+<p>
+Which yields the following transformation matrix:
+</p>
+
+\begin{align}
+\begin{bmatrix}
+\frac{2}{r - l} &amp; 0 &amp; 0 &amp; -\frac{r + l}{r - l} \\
+0 &amp; frac{2}{t - b} &amp; 0 &amp; -\frac{t + b}{t - b} \\
+0 &amp; 0 &amp; 1 &amp; 0 \\
+0 &amp; 0 &amp; 0 &amp; 1 \\
+\end{bmatrix}
+\end{align}
+
+<p>
+So:
+</p>
+
+\begin{align}
+\begin{bmatrix}
+\frac{2}{r - l} &amp; 0 &amp; 0 &amp; -\frac{r + l}{r - l} \\
+0 &amp; frac{2}{t - b} &amp; 0 &amp; -\frac{t + b}{t - b} \\
+0 &amp; 0 &amp; 1 &amp; 0 \\
+0 &amp; 0 &amp; 0 &amp; 1 \\
+\end{bmatrix} \cdot 
+\begin{bmatrix}
+x \\
+y \\
+z \\
+1 \\
+\end{bmatrix} = 
+\begin{bmatrix}
+\frac{2x}{r - l} - \frac{r + l}{r - l}
+\frac{2y}{t - b} - \frac{t + b}{t - b}
+z
+1
+\end{bmatrix}
+\end{align}
+
+<p>
+And finally, to complete our orthographic projection matrix, we need to remap the z-coordinates from \(-1\) to \(1\). We start with the following condition:
+</p>
+
+\begin{align}
+n \leq -z \leq f
+\end{align}
+
+<p>
+Don't forget that the \(z\)-coordinates of all points visible to the camera are negative, which is why we use \(-z\) instead of \(z\).
+</p>
+
+\begin{align}
+0 \leq -z - n\leq f - n
+\end{align}
+
+\begin{align}
+0 \leq \frac{-z - n}{f - n} \leq 1
+\end{align}
+
+\begin{align}
+0 \leq 2\frac{-z - n}{f - n} \leq 2
+\end{align}
+
+\begin{align}
+-1 \leq 2\frac{-z - n}{f - n} - 1 \leq 1
+\end{align}
+
+\begin{align}
+-1 \leq \frac{-2z - 2n -f + n}{f - n} \leq 1
+\end{align}
+
+\begin{align}
+-1 \leq \frac{-2z - n - f}{f - n} \leq 1
+\end{align}
+
+\begin{align}
+-1 \leq \frac{-2z}{f - n} - \frac{n + f}{n - f}{f - n} \leq 1
+\end{align}
+
+<p>
+Now we add this to the matrix:
+</p>
+
+\begin{align}
+\begin{bmatrix}
+\frac{2}{r - l} &amp; 0 &amp; 0 &amp; -\frac{r + l}{r - l} \\
+0 &amp; frac{2}{t - b} &amp; 0 &amp; -\frac{t + b}{t - b} \\
+0 &amp; 0 &amp; -\frac{2}{f - n} &amp; -\frac{n + f}{n - f} \\
+0 &amp; 0 &amp; 0 &amp; 1 \\
+\end{bmatrix}
+\end{align}
+
+<p>
+So:
+</p>
+
+\begin{align}
+\begin{bmatrix}
+\frac{2}{r - l} &amp; 0 &amp; 0 &amp; -\frac{r + l}{r - l} \\
+0 &amp; frac{2}{t - b} &amp; 0 &amp; -\frac{t + b}{t - b} \\
+0 &amp; 0 &amp; -\frac{2}{f - n} &amp; -\frac{n + f}{n - f} \\
+0 &amp; 0 &amp; 0 &amp; 1 \\
+\end{bmatrix} \cdot
+\begin{bmatrix}
+x \\
+y \\
+z \\
+1 \\
+\end{bmatrix} = 
+\begin{bmatrix}
+\frac{2x}{r - l} - \frac{r + l}{r - l}
+\frac{2y}{t - b} - \frac{t + b}{t - b}
+\frac{-2z}{f - n} - \frac{f + n}{f - n}
+1
+\end{bmatrix}
+\end{align}
 </div>
   
 
