[AGAA] 11_03: finish notes [skip ci]

--- a/src/Notes/ComputerScience/CG/RTGW/04/02_02_orthographic.html
+++ b/src/Notes/ComputerScience/CG/RTGW/04/02_02_orthographic.html
@@ -38,6 +38,14 @@
 
 <hr>
 
+<div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
+<ul>
+<li>
+<a href="02_02_orthographic.html#References">References</a>
+
+</li></ul>
+<hr>
+
 <p>
 In this chapter, we will explore how to construct a matrix that projects a point from camera space onto the image plane of an orthographic camera.
 </p>
@@ -304,6 +312,14 @@ z \\
 1
 \end{bmatrix}
 \end{align}
+
+<div id="Orthographic Matrix-References"><h2 id="References" class="header"><a href="#Orthographic Matrix-References">References</a></h2></div>
+
+<ol>
+<li>
+<a href="https://www.scratchapixel.com/lessons/3d-basic-rendering/perspective-and-orthographic-projection-matrix/orthographic-projection-matrix.html">Orthographic Matrix</a>
+
+</li></ol>
 </div>
   
 
