[AGAA] 11_03: add entry to index [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -182,6 +182,9 @@ Further Topics in Algebra
 </li><li>
 <a href="11_02.html">Arithmetric Sequences and Series</a>
 
+</li><li>
+<a href="11_03.html">Geometric Sequences and Series</a>
+
 </li></ol>
 </li></ol>
 </div>
